# qwenpaw-tui

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: gen_screenshot.py
src/paw/: __init__.py  app.py  cli.py  events.py  normalize.py  resolve.py  sse.py  themes.py
src/paw/transport/: acp.py  base.py  http.py
src/paw/widgets/: __init__.py  command_menu.py  messages.py  session_picker.py  status_bar.py
tests/: _fake_acp_agent.py  test_acp_transport.py  test_app.py  test_cli.py  test_normalize.py  test_qwenpaw_dev_integration.py  test_resolve.py  test_sse.py  test_welcome_message.py
